option('IMGUI_WS_ALL_WARNINGS', type : 'string', value : IMGUI_WS_STANDALONE, description : 'imgui-ws: enable all compiler warnings')
option('IMGUI_WS_ALL_WARNINGS_3RD_PARTY', type : 'boolean', value : false, description : 'imgui-ws: enable all compiler warnings in 3rd party libs')
option('IMGUI_WS_SANITIZE_THREAD', type : 'boolean', value : false, description : 'imgui-ws: enable thread sanitizer')
option('IMGUI_WS_SANITIZE_ADDRESS', type : 'boolean', value : false, description : 'imgui-ws: enable address sanitizer')
option('IMGUI_WS_SANITIZE_UNDEFINED', type : 'boolean', value : false, description : 'imgui-ws: enable undefined sanitizer')
option('IMGUI_WS_SUPPORT_SDL2', type : 'boolean', value : false, description : 'imgui-ws: imgui with sdl2')
option('IMGUI_WS_BUILD_EXAMPLES_NULL', type : 'string', value : IMGUI_WS_STANDALONE, description : 'imgui-ws: build headless examples')
option('IMGUI_WS_BUILD_EXAMPLES_SDL2', type : 'string', value : IMGUI_WS_STANDALONE, description : 'imgui-ws: build sdl2 examples')
option('IMGUI_WS_BUILD_TOOLS', type : 'string', value : IMGUI_WS_STANDALONE, description : 'imgui-ws: build tools')
option('INCPPECT_DEBUG', type : 'boolean', value : true, description : 'Enable debug messages in the incppect service')
option('INCPPECT_NO_SSL', type : 'boolean', value : false, description : 'Disable SSL support')
